# ocr-engine

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: OCRExport.h  OCRImageProcessor.h  Preprocessor.h  Segmenter.h
src/: OCRExport.cpp  OCRImageProcessor.cpp  Preprocessor.cpp  Segmenter.cpp  main  main.cpp
